--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/BDMemoryPaging
-spring.datasource.username=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configurações do postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/BDMemoryPaging
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+
 
